--- a/style.css
+++ b/style.css
@@ -1,213 +1,295 @@
-body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 18px;
-}
-
 * {
-  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  background-color: 0, 0, 0, 1;
 }
 
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
+html,
+body {
+  height: 100%;
+}
+body {
+  opacity: 1;
+  transition: 0.7s opacity;
 }
 
-h1,
-h2,
-h3 {
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
-  color: #4194f4;
+body.fade {
+  opacity: 0;
+  transition: none;
 }
+/* --- Home Page --- */
 
-h1 {
-  font-size: 30px;
-  line-height: 49px;
-  border-bottom: 3px solid #ddd;
-}
-
-h2,
-h3 {
-  font-size: 22px;
-}
-
-#masthead {
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
-  color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
-}
-
-#logo {
-  float: left;
-  width: 250px;
-  height: 90px;
-  font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 90px;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background: #4194f4;
-  overflow: hidden;
-}
-
-nav {
-  float: left;
-  width: 100%;
-  background-color: #4194f4;
-  position: absolute;
-  overflow: hidden;
-}
-
-nav-wrapper {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-footer {
-  content: 0 0 50px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
-  text-align: center;
-  height: 70px;
-}
-
-.page-footer {
-  background-color: #4194f4;
-}
-
-h3,
-h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px;
-  border-bottom: 2px solid #eee;
-}
-
-#main-container {
-  padding-top: 100px;
-  min-height: calc(100vh - 70px);
-}
-
-.main-section {
-  float: left;
-  width: 100%;
-  max-width: 960px;
-  padding: 30px;
-  margin: 0 0 40px;
-  background: #fff;
-  border: 1px solid #ddd;
-}
-
-.work {
-  position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: none;
-}
-
-.work:nth-child(even) {
-  margin-right: 40px;
-}
-
-.work img {
-  height: 205.5px;
-  width: 274px;
-  /* width: 100%; */
-  border: 0 none;
-  opacity: 0.8;
-}
-
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
+.jumbotron {
+  background: url(../images/portfoliobg.jpg) no-repeat center center fixed;
+  height: 85vh;
   margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #fff;
+  color: #f5f5f5;
   text-align: center;
-  background: #4194f4;
-  border-bottom: 0;
+  font-weight: 500;
+  text-shadow: 2px 2px #333;
+}
+.navbar-brand {
+  font-family: "Dancing Script", cursive;
+  font-size: 1.75rem;
+  font-weight: 800;
 }
 
-.auth-image {
-  float: left;
-  width: 225px;
+nav li {
+  padding-left: 3em;
+}
+
+.display-4 {
+  color: #f5f5f5;
+  text-align: center;
+  font-weight: 500;
+  text-shadow: 2px 2px #333;
+  padding-top: 5em;
+}
+
+.btn-outline-secondary {
+  color: #f5f5f5;
+}
+
+footer small,
+footer a {
+  color: #f5f5f5;
+  text-align: right;
+  height: 1.5rem;
+  margin-bottom: 15px;
+  text-decoration: none;
+  font-size: small;
+}
+
+footer a:hover {
+  color: #f5f5f5;
+}
+
+/* --- About Page --- */
+#page-content {
+  color: #f5f5f5;
+}
+.bio {
+  background-color: #fffff0;
+}
+
+.about p {
+  line-height: 1.75em;
+}
+
+#page-content {
+  margin-top: 2em;
+  flex: 1 0 auto;
+  padding-top: 3em;
+}
+
+/* --- Portfolio Page --- */
+.display-5 {
+  color: #f5f5f5;
+}
+.images img {
+  max-height: auto;
+  max-width: auto;
+  padding: 1em;
+}
+
+.title {
+  padding: 1em;
+}
+.overlay {
+  display: inline-block;
+  position: relative;
+  padding: 0.75em;
+  background: #fff;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+}
+.text {
+  background: rgba(0, 0, 0, 0.9);
+  color: whitesmoke;
+  font-size: 2em;
+  transition: opacity 0.5s;
+  opacity: 0;
+  position: absolute;
+  top: 0.5em;
+  bottom: 0.5em;
+  left: 0.5em;
+  right: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay:hover .text {
+  opacity: 0.85;
+}
+
+.btn {
+  border-radius: 1rem;
+}
+
+.btn-icon {
+  text-shadow: none;
+}
+
+img {
+  max-width: 100%;
   height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
 }
 
-#contact-form ul {
-  margin-bottom: 20px;
+.images.container {
+  margin: 2em;
 }
 
-#contact-form li {
-  margin-bottom: 10px;
+a:hover {
+  color: #f5f5f5;
+  text-decoration: none;
+  opacity: 0.7;
 }
 
-label,
-input[type="text"],
-input[type="email"],
-textarea {
-  display: block;
-  width: 100%;
+/* --- Contact Page --- */
+
+h1.contact {
+  padding: 1.5em;
 }
 
-input[type="text"],
-input[type="email"],
-textarea {
-  height: 35px;
-  padding: 0 10px;
-  font-size: 14px;
-  border: 1px solid #ddd;
+.icon {
+  padding: 2em;
+  padding-top: 0;
 }
 
-textarea {
-  height: 200px;
+.icon-links a:link {
+  color: #e6dede;
 }
 
-input[type="submit"] {
-  padding: 10px 30px;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  background: #4194f4;
-  border: 0 none;
+.icon-links a:visited {
+  color: #e6dede;
 }
 
-@media screen and (max-width: 980px) {
+.icon-links a:hover {
+  color: #46acffce;
+  transition: 0.35s;
+  transform: scale(3);
+}
+/* --- Resume Page --- */
+
+.resume {
+  margin-top: 5rem;
+  margin-bottom: 4rem;
 }
 
+.resume-icon {
+  color: #5ca6eb;
+  text-shadow: none;
+}
+
+.resume-links {
+  line-height: 2rem;
+}
+
+.resume-links a:link {
+  color: #e6dede;
+}
+
+.html-logo {
+  color: orange;
+}
+
+.css-logo {
+  color: rgb(31, 143, 247);
+}
+
+.js-logo {
+  color: yellow;
+}
+
+.n-js-logo {
+  color: rgb(7, 189, 7);
+}
+
+.resume-links a:visited {
+  color: #e6dede;
+}
+
+.resume-links a:hover {
+  color: #f5f5f5;
+  text-decoration: underline;
+}
+
+.resume-name {
+  font-family: "Dancing Script", cursive;
+  font-size: 2.6rem;
+}
+
+hr {
+  background-color: #f5f5f5;
+}
+
+.btn-send {
+  color: rgb(125, 192, 250);
+}
+.thanks-title {
+  color: #f5f5f5;
+  font-family: "Dancing Script", cursive;
+  font-size: 3rem;
+  font-weight: 800;
+  margin-top: 6rem;
+}
+.thanks-reply {
+  color: #f5f5f5;
+  font-family: "Dancing Script", cursive;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
 @media screen and (max-width: 768px) {
-  .main-section {
-    width: 100%;
+  /* Home Page */
+  h1 {
+    font-size: 1.75em;
   }
-  #masthead {
-    width: 100%;
+  h2 {
+    font-size: 1em;
+  }
+  h4 {
+    font-size: 1.25em;
+  }
+
+  /* Contact Page */
+  .fa-3x {
+    font-size: 225%;
+  }
+
+  .icon {
+    padding: 12px;
+  }
+
+  form {
+    margin: 1em;
+  }
+
+  /* About Page */
+
+  #bio-pic {
+    max-height: 400px;
+    padding: 0;
+  }
+  figure {
+    align-content: center;
   }
 }
+.about {
+  margin-bottom: 3em;
+}
 
-@media screen and (max-width: 640px) {
-  .main-section {
-    width: 100%;
-    padding: 0px 30px 0px 30px;
-  }
-  #masthead {
-    width: 90%;
-  }
+#page-content {
+  margin: 2em;
+}
+
+/* Portfolio Text */
+
+.text {
+  text-align: center;
+}
+
+/* --- Resume Page --- */
+
+#profile-pic {
+  max-height: 400px;
+  align-items: center;
 }
